# positron-stata

./: .gitignore  CHANGELOG.md  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
examples/: stata-only.qmd  stata-python-polyglot.qmd  stata-r-polyglot.qmd
language-configuration/: stata-language-configuration.json
python/: api_models.py  check-python.js  output_filter.py  requirements.txt  session_manager.py  smcl_parser.py  start-server.js  stata_mcp_server.py  stata_worker.py  utils.py
python/devtools/: prepare-npm-package.js  restore-vscode-package.js
snippets/: stata.json
src/: autocomplete-events.ts  commands.ts  completionProvider.ts  configuration.ts  data-explorer.ts  extension.ts  help-server.ts  help.ts  hoverProvider.ts  outlineProvider.ts  provider.ts  runtime-manager.ts  runtime.ts  server-client.ts  server-manager.ts  session.ts  stata-installation.ts  stata-output.ts  stata-sections.ts  stata-selection.ts  stata-table.ts  terminal.ts  variable-manager.ts  viewer.ts
src/positron_stata_mcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
syntaxes/: stata.tmLanguage.json  stata.tmlLanguage.json
tests/: README.md  conftest.py  simple_mcp_test.py  test_compact_filter.py  test_multiprocess_pystata.py  test_notifications.py  test_quarto_integration.py  test_session_manager.py  test_stata_installation.mjs  test_stop_execution.py  test_streaming_http.py  test_timeout_direct.py
tests/fixtures/: run_selection_parallel_test.md  test_8_sessions.do  test_global.do  test_gr_list_issue.do  test_graph_issue.do  test_graph_name_param.do  test_keepalive.do  test_largedata.do  test_log_location.do  test_stata.do  test_stream.do  test_streaming.do  test_timeout.do  test_understanding.do
